Add search users endpoint
