# openapi.yml
@@ -8,7 +8,7 @@ info:
     url: "https://www.leivalle.org"
     email: "anton.rautio@gmail.com"
 servers:
-  - url: "http://localhost:3000"
+  - url: "https://api.sakko.app"
     description: "Production API"
 paths:
   /fine:
@@ -173,6 +173,26 @@ paths:
                 $ref: "#/components/schemas/User"
         403:
           $ref: "#/components/responses/AlreadyExists"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/BadRequest"
+  /user/search:
+    get:
+      parameters:
+        - in: query
+          name: query
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
         404:
           $ref: "#/components/responses/NotFound"
         500:
